--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,6 @@
 	},
 	"homepage": "https://gitlab.com/olaoluwavincent/react-next-typescript#readme",
 	"dependencies": {
-		"@emailjs/browser": "^3.7.0",
 		"@fastify/static": "^6.5.0",
 		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.20.0",
@@ -33,8 +32,7 @@
 		"express-async-handler": "^1.2.0",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.5.4",
-		"serve-static": "^1.15.0",
-		"vite-template-redux": "^1.0.1"
+		"serve-static": "^1.15.0"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.19"
