--- a/backend/package.json
+++ b/backend/package.json
@@ -1,40 +1,40 @@
 {
-	"name": "react-next",
-	"version": "1.0.0",
-	"description": "Backend for the Porject||Learning deployment to Firebase",
-	"main": "index.js",
-	"scripts": {
-		"start": "node server.js",
-		"json": "nodemon server.js",
-		"client": "npm run --prefix frontend start",
-		"stack": "concurrently \"npm run start\" \"npm run client\""
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+ssh://git@gitlab.com/olaoluwavincent/react-next-typescript.git"
-	},
-	"author": "Olaoluwa Vincent",
-	"license": "ISC",
-	"bugs": {
-		"url": "https://gitlab.com/olaoluwavincent/react-next-typescript/issues"
-	},
-	"homepage": "https://gitlab.com/olaoluwavincent/react-next-typescript#readme",
-	"dependencies": {
-		"@fastify/static": "^6.5.0",
-		"bcryptjs": "^2.4.3",
-		"body-parser": "^1.20.0",
-		"colors": "^1.4.0",
-		"concurrently": "^7.3.0",
-		"cors": "^2.8.5",
-		"dotenv": "^16.0.2",
-		"emailjs": "^4.0.1",
-		"express": "^4.18.1",
-		"express-async-handler": "^1.2.0",
-		"jsonwebtoken": "^8.5.1",
-		"mongoose": "^6.5.4",
-		"serve-static": "^1.15.0"
-	},
-	"devDependencies": {
-		"nodemon": "^2.0.19"
-	}
+  "name": "react-next",
+  "version": "2.0",
+  "description": "Fullstak Node.js/Express and Next.js",
+  "main": "index.js",
+  "scripts": {
+    "start": "node server.js",
+    "json": "nodemon server.js",
+    "client": "npm run --prefix ../frontend start",
+    "stack": "concurrently \"npm run start\" \"npm run client\""
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@gitlab.com/olaoluwavincent/react-next-typescript.git"
+  },
+  "author": "Olaoluwa Vincent",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://gitlab.com/olaoluwavincent/react-next-typescript/issues"
+  },
+  "homepage": "https://gitlab.com/olaoluwavincent/react-next-typescript#readme",
+  "dependencies": {
+    "@fastify/static": "^6.5.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.0",
+    "colors": "^1.4.0",
+    "concurrently": "^7.3.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.2",
+    "emailjs": "^4.0.1",
+    "express": "^4.18.1",
+    "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.5.4",
+    "serve-static": "^1.15.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
+  }
 }
